Remove unnecessary code, rename some methods, edit documentation